RESOLVED FIXED173126
Crash in -[WKWebView _initializeWithConfiguration:]
https://bugs.webkit.org/show_bug.cgi?id=173126
Summary Crash in -[WKWebView _initializeWithConfiguration:]
Jer Noble
Reported 2017-06-08 20:33:40 PDT
Crash in -[WKWebView _initializeWithConfiguration:]
Attachments
Patch (2.00 KB, patch)
2017-06-08 20:35 PDT, Jer Noble
no flags
Follow-up Patch (3.47 KB, patch)
2017-06-09 13:34 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-06-08 20:35:15 PDT
WebKit Commit Bot
Comment 2 2017-06-09 01:05:35 PDT
Comment on attachment 312374 [details] Patch Clearing flags on attachment: 312374 Committed r217967: <http://trac.webkit.org/changeset/217967>
WebKit Commit Bot
Comment 3 2017-06-09 01:05:37 PDT
All reviewed patches have been landed. Closing bug.
Matthew Hanson
Comment 4 2017-06-09 07:05:15 PDT
Darin Adler
Comment 5 2017-06-09 12:02:20 PDT
Comment on attachment 312374 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=312374&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:140 > NSString *_overrideContentSecurityPolicy; Looks like this has exactly the same problem as _mediaContentTypesRequiringHardwareSupport. Would you fix that, or would you like me to do it? > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:141 > + RetainPtr<NSString> _mediaContentTypesRequiringHardwareSupport; The setter should copy the string, not just retain it.
Jer Noble
Comment 6 2017-06-09 12:29:15 PDT
(In reply to Darin Adler from comment #5) > Comment on attachment 312374 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=312374&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:140 > > NSString *_overrideContentSecurityPolicy; > > Looks like this has exactly the same problem as > _mediaContentTypesRequiringHardwareSupport. Would you fix that, or would you > like me to do it? Sure I'll take care of it when I do the followup below: > > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:141 > > + RetainPtr<NSString> _mediaContentTypesRequiringHardwareSupport; > > The setter should copy the string, not just retain it. Good catch!
Jer Noble
Comment 7 2017-06-09 13:34:46 PDT
Reopening to attach new patch.
Jer Noble
Comment 8 2017-06-09 13:34:46 PDT
Created attachment 312484 [details] Follow-up Patch
WebKit Commit Bot
Comment 9 2017-06-09 15:09:04 PDT
Comment on attachment 312484 [details] Follow-up Patch Clearing flags on attachment: 312484 Committed r218021: <http://trac.webkit.org/changeset/218021>
WebKit Commit Bot
Comment 10 2017-06-09 15:09:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.