Crash in -[WKWebView _initializeWithConfiguration:] https://bugs.webkit.org/show_bug.cgi?id=173126

Reviewed by Antti Koivisto.

Crash occurs when passing an autoreleased NSString into _setMediaContentTypesRequiringHardwareSupport.
The ivar should be a RetainPtr rather than a bare NSString *.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration _mediaContentTypesRequiringHardwareSupport]):


Canonical link: https://commits.webkit.org/189991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217967 268f45cc-cd09-0410-ab3c-d52691b4dbfc